--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mercadopago": "^2.10.0",
     "mysql2": "^3.3.0",
     "sequelize": "^6.35.0"
   },
